--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.14.1",
     "mongoose": "^4.12.0",
     "morgan": "~1.8.1",
+    "npm": "^5.8.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
